# test

./: CMakeLists.txt  Makefile  conda_boost.yml  pyproject.toml  requirements.txt  setup.py  setup8.py  version.yml
.github/workflows/: CI.yml  build.yml  cmake.yml
codpy/: print_ok.py
codpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: funcs.hpp  inv.cpp  test_funcs.py
