[build-system]
requires = ["setuptools>=42", "pybind11[global]","numpy>=1.20","mkl","pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 3
build = ["cp37*","cp38*","cp39*","cp310*","cp311*"]
# build = ["cp39*"]
# Skip 32 bit architectures, musllinux, and i686
skip = ["*-win32", "*-musllinux_x86_64", "*_i686"]
# before-build = "python -m pip install cmake"

[tool.cibuildwheel.macos]
# Build for x86_64 and arm64
archs = ["x86_64", "arm64"]
